Feat: Intermediate state of xLSTM integration.

--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,8 @@ tags
 
 # ruff
 .ruff_cache
+
+
+#TODO: THIS WAS ADDED FOR TESTING, please remove!
+# symbolic link to the mlstm_simple_torch repo
+mlstm_simple_torch
